feat: Add auto-updater functionality

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -133,6 +133,7 @@
     </div>
 
     <script src="api-key-manager.js"></script>
+    <script src="update-manager.js"></script>
     <script src="renderer.js"></script>
 </body>
 </html>
