--- a/renderer/index.html
+++ b/renderer/index.html
@@ -128,7 +128,7 @@
 
         <!-- Footer -->
         <footer class="app-footer">
-            <p>Covenantrix v0.3.2 - Proof of Concept for Electron + Python Distribution</p>
+            <p>Covenantrix 0.4.1 - Proof of Concept for Electron + Python Distribution</p>
         </footer>
     </div>
 
