--- a/renderer/index.html
+++ b/renderer/index.html
@@ -116,6 +116,28 @@
                 </div>
             </section>
 
+            <!-- Document Upload Panel (Minimal) -->
+            <section class="ai-panel">
+                <h2>Document Upload for LightRAG</h2>
+                <div class="ai-test-content">
+                    <div class="input-group">
+                        <label for="documentInput">Upload Document (PDF/TXT):</label>
+                        <input 
+                            type="file" 
+                            id="documentInput" 
+                            accept=".pdf,.txt"
+                            class="api-key-input"
+                        >
+                        <button id="uploadDocBtn" class="test-button">Upload & Process Document</button>
+                    </div>
+                    <div id="documentResult" class="result-area"></div>
+                    
+                    <div class="input-group">
+                        <small>💡 After uploading documents, use the AI test below to query them!</small>
+                    </div>
+                </div>
+            </section>
+
             <!-- Logs Panel -->
             <section class="logs-panel">
                 <h2>Application Logs</h2>
@@ -128,7 +150,7 @@
 
         <!-- Footer -->
         <footer class="app-footer">
-            <p>Covenantrix 0.4.3 - Proof of Concept for Electron + Python Distribution</p>
+            <p>Covenantrix 0.5.0 - Proof of Concept for Electron + Python Distribution</p>
         </footer>
     </div>
 
